@@ -13,6 +13,8 @@ Changes to Version 2.1-3
   o summary() and print() methods for Anova.mlm() can now report univariate ANOVAs (suggestion and some code by Michael Friendly).
   
   o added "value" and "vcov" attributes to objects returned by linearHypothesis() (after suggestions by Liviu Andronic and Steven Yen).
+  
+  o compareCoefs() now checks classes of models. 
 
 Changes to Version 2.1-2
 
